--- a/memoria/src/index.css
+++ b/memoria/src/index.css
@@ -53,12 +53,14 @@ body {
 
 #gameOver{
   position: absolute;
+  display: flex;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
   color: white;
   font-size: 42px;
-  display: none;
+  /* display: none; */
   justify-content: center;
   align-items: center;
   flex-direction: column;
